<resources>
    <string name="API_CALL_FAILED">数据获取失败</string>
    <string name="Cancel">取消</string>
    <string name="Confirm">确定</string>
    <string name="Confirm_receipt">确认心爱的周边已收到?</string>
    <string name="Do_Clear">立即清空</string>
    <string name="E_Ticket">电子票</string>
    <string name="ID_number">身份证号</string>
    <string name="KuCunJinZhang">库存紧张</string>
    <string name="TUIKirErrorSVRFriendAccountNotFoundEx">Requested user account not found.</string>
    <string name="TUIKitERRORSDKNetResetByPeer">The peer resets the connection.</string>
    <string name="TUIKitErrorAutoLoginNeedUserSig">Local ticket for auto login expired. userSig is required for manual login.</string>
    <string name="TUIKitErrorBindFaildIsBinding">The bind operation in progress.</string>
    <string name="TUIKitErrorBindFaildRegTimeout">Registration timed out</string>
    <string name="TUIKitErrorCrossThread">Cross-thread error</string>
    <string name="TUIKitErrorDatabaseOperateFailed">Local database operation failed</string>
    <string name="TUIKitErrorEmptyFile">Empty file</string>
    <string name="TUIKitErrorEnableUserStatusOnConsole">The user status not supported. Please enable the ability in the console first.</string>
    <string name="TUIKitErrorExpiredSessionNode">SessionNode is null.</string>
    <string name="TUIKitErrorFileNotFound">File not found</string>
    <string name="TUIKitErrorFileOpenFailed">Failed to open file</string>
    <string name="TUIKitErrorFileTooLarge">File size exceeds the limit.</string>
    <string name="TUIKitErrorFileTransAuthFailed">Authentication failed during file transfer.</string>
    <string name="TUIKitErrorFileTransDownloadFailed">Failed to download the file via FTP. Check whether your network is connected or the file or audio has expired.</string>
    <string name="TUIKitErrorFileTransNoServer">Failed to get the server list via FTP.</string>
    <string name="TUIKitErrorFileTransUploadFailed">Failed to upload the file via FTP. Check your network connection.</string>
    <string name="TUIKitErrorFileTransUploadFailedNotImage">Failed to upload the file via FTP. Check if the uploaded image can be opened normally.</string>
    <string name="TUIKitErrorFriendshipProxyLocalCheckErr">proxy_manager request parameter is invalid in local check.</string>
    <string name="TUIKitErrorFriendshipProxySyncedFail">proxy_manager sync failed</string>
    <string name="TUIKitErrorFriendshipProxySyncing">proxy_manager failed to sync SVR data</string>
    <string name="TUIKitErrorGroupInvalidField">group assistant request field contains non-preset fields.</string>
    <string name="TUIKitErrorGroupStoreageDisabled">Local storage of group assistant group data is disabled.</string>
    <string name="TUIKitErrorHTTPRequestFailed">HTTP request failed</string>
    <string name="TUIKitErrorIOOperateFaild">Local IO operation error</string>
    <string name="TUIKitErrorInProcess">Executing</string>
    <string name="TUIKitErrorInvalidConveration">Invalid session</string>
    <string name="TUIKitErrorInvalidIdentifier">Invalid identifier</string>
    <string name="TUIKitErrorInvalidJson">Invalid JSON format</string>
    <string name="TUIKitErrorInvalidMsgElem">Invalid IM SDK message elem</string>
    <string name="TUIKitErrorInvalidParameters">Invalid parameter</string>
    <string name="TUIKitErrorInvalidSDKObject">Invalid object</string>
    <string name="TUIKitErrorLackUGExt">Missing UGC extension pack</string>
    <string name="TUIKitErrorLoadGrpInfoFailed">Failed to load groupinfo from storage</string>
    <string name="TUIKitErrorLoadMsgFailed">Failed to load local database</string>
    <string name="TUIKitErrorLoggedOutBeforeLoginFinished">Logged out before login (returned at login time)</string>
    <string name="TUIKitErrorLoginAuthFailed">Account verification failed (user info get failed)</string>
    <string name="TUIKitErrorLoginKickedOffByOther">Log in to the same account on other devices</string>
    <string name="TUIKitErrorLoginOpenMsgRspParseFailed">Response parsing failed when OPENSTATSVC reports status to OPENMSG during login.</string>
    <string name="TUIKitErrorLoginOpenMsgTimeout">Timeout occurred when OPENSTATSVC attempted to report status to OPENMSG during login.</string>
    <string name="TUIKitErrorLoginSigExpire">Returned at login time. Ticket expired.</string>
    <string name="TUIKitErrorLoginTlsRspParseFailed">TSL response packet is verified at login time. Packet length error.</string>
    <string name="TUIKitErrorLoginTslDecryptFailed">TLS decryption failed at login time.</string>
    <string name="TUIKitErrorNeverConnectAfterLaunch">Failed to connect network when the app is lunched.</string>
    <string name="TUIKitErrorNoPreviousLogin">Not logged in to the user\'s account.</string>
    <string name="TUIKitErrorNotLogin">Not logged in to IM SDK</string>
    <string name="TUIKitErrorOpenBDHBase">Openbdh error</string>
    <string name="TUIKitErrorOutOfMemory">Out of storage</string>
    <string name="TUIKitErrorPacketFailReqNoAuth">No permission when sending request packet</string>
    <string name="TUIKitErrorPacketFailReqNoNet">No network connection when sending request packet, which is converted to case ERR_REQ_NO_NET_ON_REQ:</string>
    <string name="TUIKitErrorPacketFailRespNoNet">No network connection when sending response packet, which is converted to case ERR_REQ_NO_NET_ON_RSP:</string>
    <string name="TUIKitErrorPacketFailRespTimeout">Response timed out</string>
    <string name="TUIKitErrorPacketFailSSOErr">SSO error</string>
    <string name="TUIKitErrorPacketFailUnknown">Unknown error occurred while sending packet</string>
    <string name="TUIKitErrorParseResponseFaild">PB parsing failed</string>
    <string name="TUIKitErrorQALNoShortConneAvailable">No available SSO for short connections.</string>
    <string name="TUIKitErrorReqContentAttach">Message content is filtered due to security reasons.</string>
    <string name="TUIKitErrorReqFailed">QAL execution failed</string>
    <string name="TUIKitErrorReqInvaidReq">Invalid request. Invalid toMsgService.</string>
    <string name="TUIKitErrorReqInvalidCookie">Invalid SSO cookie</string>
    <string name="TUIKitErrorReqInvalidSign">SSO signature error</string>
    <string name="TUIKitErrorReqKickOff">Forced logout on another device</string>
    <string name="TUIKitErrorReqNoNetOnReq">No network connection when sending request</string>
    <string name="TUIKitErrorReqNoNetOnResp">No network connection when sending response</string>
    <string name="TUIKitErrorReqOnverLoaded">Request queue is full.</string>
    <string name="TUIKitErrorReqServiceSuspend">Service suspended</string>
    <string name="TUIKitErrorRequestNoNetOnReq">No network connection when sending request. Try again once network connection is restored.</string>
    <string name="TUIKitErrorRequestNoNetOnRsp">No network connection when sending response. Try again once network connection is restored.</string>
    <string name="TUIKitErrorRequestOnverLoaded">Request queue is full.</string>
    <string name="TUIKitErrorSDKFriendShipInvalidProfileKey">Invalid data field</string>
    <string name="TUIKitErrorSDKFriendshipFriendGroupEmpty">The friend list field is invalid. It is required with each list name of 30 bytes at most.</string>
    <string name="TUIKitErrorSDKFriendshipInvalidAddRemark">The remark field exceeds the limit of 96 bytes.</string>
    <string name="TUIKitErrorSDKFriendshipInvalidAddSource">The source field in the friend request is invalid, which should be prefixed with \"AddSource_Type_\".</string>
    <string name="TUIKitErrorSDKFriendshipInvalidAddWording">The description field in the friend request is invalid, which should not exceed 120 bytes.</string>
    <string name="TUIKitErrorSDKGroupInvalidFaceURL">Group profile photo URL is invalid, which should not exceed 100 bytes.</string>
    <string name="TUIKitErrorSDKGroupInvalidID">Invalid group ID. Custom group ID must be printable ASCII characters (0x20-0x7e), with maximum length of 48 bytes, and cannot be prefixed with @TGS#.</string>
    <string name="TUIKitErrorSDKGroupInvalidIntroduction">Group description is invalid, which cannot exceed 240 bytes.</string>
    <string name="TUIKitErrorSDKGroupInvalidName">Group name is invalid, which cannot exceed 30 bytes.</string>
    <string name="TUIKitErrorSDKGroupInvalidNameCard">Group card is invalid, which cannot exceed 50 bytes.</string>
    <string name="TUIKitErrorSDKGroupInvalidNotification">Group notice is invalid, which cannot exceed 300 bytes.</string>
    <string name="TUIKitErrorSDKGroupInviteNoMember">The number of members to be invited cannot be 0.</string>
    <string name="TUIKitErrorSDKGroupInviteSuperDeny">Group owners cannot be invited.</string>
    <string name="TUIKitErrorSDKGroupJoinPrivateGroupDeny">Request to join private groups is not allowed.</string>
    <string name="TUIKitErrorSDKGroupMemberCountLimit">The maximum number of group members is exceeded.</string>
    <string name="TUIKitErrorSDKHadInit">SDK has been initialized. Do not initialize again.</string>
    <string name="TUIKitErrorSDKMsgKeyReqDifferRsp">Message key error</string>
    <string name="TUIKitErrorSDKNetAllreadyConn">Network connection has been established.</string>
    <string name="TUIKitErrorSDKNetAuthInvalid">Network link authentication not completed</string>
    <string name="TUIKitErrorSDKNetCompressFailed">Unable to compress data packet</string>
    <string name="TUIKitErrorSDKNetConnRefuse">Network connection denied. Too many attempts. Service denied by the server.</string>
    <string name="TUIKitErrorSDKNetConnTimeout">Network connection timed out. Try again once network connection is restored.</string>
    <string name="TUIKitErrorSDKNetConnectReset">Network is connected to an intermediate node or connection to the server is reset.</string>
    <string name="TUIKitErrorSDKNetDecodeFailed">Network link decryption failed</string>
    <string name="TUIKitErrorSDKNetDisconnect">Network disconnected. No connection is established, or no network is detected when a socket connection is established.</string>
    <string name="TUIKitErrorSDKNetEncodeFailed">Network link encryption failed</string>
    <string name="accept">Agree</string>
    <string name="chat_to_top">Sticky on Top</string>
    <string name="comment">评论</string>
    <string name="contact_account_tag">ID :</string>
    <string name="contact_add">Add</string>
    <string name="contact_add_wording">Verification Message：</string>
    <string name="contact_friend_group">Group</string>
    <string name="contact_friend_remark">Set Alias</string>
    <string name="contact_set_add_wording">Verification Message</string>
    <string name="contact_set_remark_and_group">Remark And Group</string>
    <string name="contact_signature_tag">Status :</string>
    <string name="profile_black">Block</string>
    <string name="profile_chat">Send Message</string>
    <string name="profile_chat_background">Background</string>
    <string name="profile_clear_message">Clear Chat History</string>
    <string name="profile_delete_friend">Delete Friend</string>
    <string name="profile_msgrev_opt">Mute Notifications</string>
    <string name="profile_remark">Alias</string>
    <string name="profile_video_chat">Video Call</string>
    <string name="profile_voice_chat">Voice Call</string>
    <string name="real_name_des_face">为便于我们帮助当前业务核实确认您的真实身份，您需要同意</string>
    <string name="real_name_des_face_one">向我们提交并授权我们加密保存您本人身份相关图像</string>
    <string name="real_name_des_face_three">业务服务提供方保存您提交的信息用户身份核验</string>
    <string name="real_name_des_face_two">向合法数据持有者核实您的身份</string>
    <string name="refuse">Decline</string>
    <string name="share_title">喜欢就要分享</string>
    <string name="third_qq">QQ</string>
    <string name="third_sina_weibo">微博</string>
    <string name="third_wechatmoments">朋友圈</string>
    <string name="wechat_friend">微信好友</string>
</resources>