<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="?attr/core_bg_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.tencent.qcloud.tuicore.component.TitleBarLayout android:id="@+id/friend_titlebar" android:layout_width="match_parent" android:layout_height="@dimen/page_title_height"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/friend_detail_area" android:background="#ffffff" android:padding="@dimen/page_margin" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_self_height">
                <com.tencent.qcloud.tuicore.component.gatherimage.ShadeImageView android:layout_gravity="start" android:id="@+id/friend_icon" android:layout_width="@dimen/contact_profile_face_size" android:layout_height="@dimen/contact_profile_face_size" android:layout_marginLeft="@dimen/contact_profile_face_margin_left" android:layout_marginTop="@dimen/contact_profile_face_margin_top" android:layout_marginRight="@dimen/contact_profile_face_margin_right" android:scaleType="centerCrop"/>
                <TextView android:textSize="@dimen/contact_profile_nick_name_text_size" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/friend_nick_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_alignTop="@+id/friend_icon" android:layout_toEndOf="@+id/friend_icon"/>
                <TextView android:textSize="@dimen/contact_profile_account_text_size" android:gravity="center_vertical" android:id="@+id/friend_account_tag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/contact_profile_text_margin" android:text="@string/contact_account_tag" android:layout_below="@+id/friend_nick_name" android:layout_alignStart="@+id/friend_nick_name"/>
                <TextView android:textSize="@dimen/contact_profile_account_text_size" android:gravity="center_vertical" android:id="@+id/friend_account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/friend_nick_name" android:layout_alignTop="@+id/friend_account_tag" android:layout_toEndOf="@+id/friend_account_tag"/>
                <TextView android:textSize="@dimen/contact_profile_account_text_size" android:gravity="center_vertical" android:id="@+id/friend_signature_tag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/contact_profile_text_margin" android:text="@string/contact_signature_tag" android:layout_below="@+id/friend_account_tag" android:layout_alignStart="@+id/friend_account_tag"/>
                <TextView android:textSize="@dimen/contact_profile_signature_text_size" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/friend_signature" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_alignTop="@+id/friend_signature_tag" android:layout_toEndOf="@+id/friend_signature_tag"/>
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/friend_application_verify_area" android:background="@color/white" android:paddingBottom="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.36dp" android:text="@string/contact_add_wording"/>
                <TextView android:id="@+id/friend_application_add_wording" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/add_friend_verify_area" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.36dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/contact_set_add_wording"/>
                <EditText android:gravity="top" android:id="@+id/add_wording_edit" android:background="@color/white" android:layout_width="match_parent" android:layout_height="138dp" android:maxLines="5"/>
                <TextView android:id="@+id/remark_and_group_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.36dp" android:layout_marginTop="10dp" android:text="@string/contact_set_remark_and_group"/>
                <com.tencent.qcloud.tuicore.component.LineControllerView android:id="@+id/friend_remark_lv" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_item_height" android:layout_marginTop="10dp" app:canNav="true" app:name="@string/contact_friend_remark"/>
                <com.tencent.qcloud.tuicore.component.LineControllerView android:id="@+id/friend_group_lv" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_item_height" app:canNav="true" app:name="@string/contact_friend_group"/>
            </LinearLayout>
            <com.tencent.qcloud.tuicore.component.LineControllerView android:id="@+id/remark" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_item_height" android:layout_marginTop="10dp" app:canNav="true" app:name="@string/profile_remark"/>
            <com.tencent.qcloud.tuicore.component.LineControllerView android:id="@+id/msg_rev_opt" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_item_height" android:layout_marginTop="10dp" app:isSwitch="true" app:name="@string/profile_msgrev_opt"/>
            <com.tencent.qcloud.tuicore.component.LineControllerView android:id="@+id/chat_to_top" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_item_height" app:isSwitch="true" app:isTop="true" app:name="@string/chat_to_top"/>
            <com.tencent.qcloud.tuicore.component.LineControllerView android:id="@+id/chat_background" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_item_height" app:canNav="true" app:name="@string/profile_chat_background"/>
            <com.tencent.qcloud.tuicore.component.LineControllerView android:id="@+id/blackList" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_item_height" android:layout_marginTop="10dp" app:isSwitch="true" app:name="@string/profile_black"/>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_primary_color" android:id="@+id/add_friend_send_btn" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="10dp" android:text="@string/contact_add" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_primary_color" android:id="@+id/accept_friend_send_btn" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="10dp" android:text="@string/accept" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_primary_color" android:id="@+id/btn_chat" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="10dp" android:text="@string/profile_chat" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_primary_color" android:id="@+id/btn_voice" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="0.68dp" android:text="@string/profile_voice_chat" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_primary_color" android:id="@+id/btn_video" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="0.68dp" android:text="@string/profile_video_chat" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_error_tip_color" android:id="@+id/btn_clear_chat_history" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="0.68dp" android:text="@string/profile_clear_message" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_error_tip_color" android:id="@+id/btn_delete" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="0.68dp" android:text="@string/profile_delete_friend" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
                <Button android:textSize="@dimen/contact_profile_btn_text_size" android:textColor="?attr/core_error_tip_color" android:id="@+id/refuse_friend_send_btn" android:background="@drawable/btn_bg_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/contact_profile_btn_height" android:layout_marginTop="0.6dp" android:text="@string/refuse" android:layout_alignParentBottom="true" android:textAllCaps="false" style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
