<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/color_white_mine_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="16sp" android:textColor="@color/abc_ic_ab_back_material" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_sw_35dp" android:text="@string/share_title"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_sw_25dp" android:layout_marginBottom="@dimen/dimen_sw_35dp">
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textColor="@color/abc_ic_ab_back_material" android:gravity="center" android:id="@+id/share_sina" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/third_sina_weibo" android:drawableTop="@drawable/share_xinlang" android:drawablePadding="10dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textColor="@color/abc_ic_ab_back_material" android:gravity="center" android:id="@+id/share_weixin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wechat_friend" android:drawableTop="@drawable/share_wechat" android:drawablePadding="10dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textColor="@color/abc_ic_ab_back_material" android:gravity="center" android:id="@+id/share_penyou_quan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/third_wechatmoments" android:drawableTop="@drawable/share_friends" android:drawablePadding="10dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textColor="@color/abc_ic_ab_back_material" android:gravity="center" android:id="@+id/share_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/third_qq" android:drawableTop="@drawable/share_qq" android:drawablePadding="10dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
    </LinearLayout>
    <View style="@style/lineHorizontalf8"/>
    <TextView android:textSize="16sp" android:textColor="@color/abc_ic_ab_back_material" android:gravity="center" android:id="@+id/txt_cancel" android:layout_width="match_parent" android:layout_height="@dimen/dimen_sw_45dp" android:text="@string/Cancel"/>
</LinearLayout>
