<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#161616" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="16sp" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="35dp" android:text="@string/share_title"/>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:layout_marginBottom="35dp">
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/share_photo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_sw_2dp">
            <ImageView android:layout_width="@dimen/dimen_sw_45dp" android:layout_height="@dimen/dimen_sw_45dp" android:src="@drawable/mine_def_photo" android:contentDescription="@string/comment"/>
            <TextView android:textSize="12sp" android:textColor="@color/white" android:layout_gravity="bottom|center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="图片分享"/>
        </LinearLayout>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/share_weixin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wechat_friend" android:drawableTop="@drawable/share_wechat_night" android:drawablePadding="4dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/share_penyou_quan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/third_wechatmoments" android:drawableTop="@drawable/share_friends_night" android:drawablePadding="4dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/share_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/third_qq" android:drawableTop="@drawable/share_qq_night" android:drawablePadding="4dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/share_sina" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/third_sina_weibo" android:drawableTop="@drawable/share_xinlang_night" android:drawablePadding="4dp"/>
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
    </LinearLayout>
    <View android:id="@+id/share_line" android:background="#d0666666" android:layout_width="match_parent" android:layout_height="0.3dp"/>
    <TextView android:textSize="16sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/txt_cancel" android:layout_width="match_parent" android:layout_height="@dimen/dimen_sw_50dp" android:text="@string/Cancel"/>
</LinearLayout>
