<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="12sp" android:textColor="@color/abc_ic_star_half_black_36dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_sw_24dp" android:layout_marginRight="@dimen/dimen_sw_24dp" android:text="@string/real_name_des_face"/>
    <TextView android:textSize="11sp" android:textColor="@color/abc_ic_star_half_black_36dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_sw_24dp" android:layout_marginTop="@dimen/dimen_sw_8dp" android:layout_marginRight="@dimen/dimen_sw_24dp" android:text="@string/real_name_des_face_one" android:drawableLeft="@drawable/red_point" android:drawablePadding="@dimen/dimen_sw_4dp"/>
    <TextView android:textSize="11sp" android:textColor="@color/abc_ic_star_half_black_36dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_sw_24dp" android:layout_marginTop="@dimen/dimen_sw_8dp" android:layout_marginRight="@dimen/dimen_sw_24dp" android:text="@string/real_name_des_face_two" android:drawableLeft="@drawable/red_point" android:drawablePadding="@dimen/dimen_sw_4dp"/>
    <TextView android:textSize="11sp" android:textColor="@color/abc_ic_star_half_black_36dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_sw_24dp" android:layout_marginTop="@dimen/dimen_sw_8dp" android:layout_marginRight="@dimen/dimen_sw_24dp" android:text="@string/real_name_des_face_three" android:drawableLeft="@drawable/red_point" android:drawablePadding="@dimen/dimen_sw_4dp"/>
</LinearLayout>
